--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <script>
         const titles = [
             "Titanic", "Spider-Man", "The Avengers", "Frozen",
-            "The Matrix", "Aladin", "Hunger Games", "Us",
+            "The Matrix", "Aladin", "Hunger Games",
             "From", "Breaking Bad", "Squid Game", "Friends",
             "Game of Thrones", "The Batman", "Halloween", "Twilight",
             "Peaky Blinders", "Joker", "Shrek", "Minions",
@@ -67,7 +67,7 @@
             "Casa de papel", "Annabelle", "The Boys", "Jurassic World",
             "Harry Potter", "Iron Man", "Superman", "Lucifer",
             "Kung Fu Panda", "Vampire Diaries", "The Fall",
-            "Karate Kid", "Final Destination", "The Godfather", "Hulk", "Class 8", "البرتقالة المرة", "علال القلدة", "Za3zou3", "كوكو لبنات"
+            "Karate Kid", "Final Destination", "The Godfather", "Hulk", "قسم 8", "البرتقالة المرة", "كوكو لبنات"
         ];
 
         function pickRandomTitle() {
