--- a/index.html
+++ b/index.html
@@ -59,15 +59,23 @@
         const titles = [
             "Titanic", "Spider-Man", "The Avengers", "Frozen",
             "The Matrix", "Aladin", "Hunger Games",
-            "From", "Breaking Bad", "Squid Game", "Friends",
-            "Game of Thrones", "The Batman", "Halloween", "Twilight",
+            "Breaking Bad", "Squid Game", "Friends",
+            "Game of Thrones", "The Batman", "Twilight",
             "Peaky Blinders", "Joker", "Shrek", "Minions",
             "Home Alone", "Toy Story", "Deadpool", "Death Note",
             "Attack On Titan", "Stranger Things", "Star Wars", "Wednesday",
             "Casa de papel", "Annabelle", "The Boys", "Jurassic World",
             "Harry Potter", "Iron Man", "Superman", "Lucifer",
             "Kung Fu Panda", "Vampire Diaries", "The Fall",
-            "Karate Kid", "Final Destination", "The Godfather", "Hulk", "قسم 8", "البرتقالة المرة", "كوكو لبنات"
+            "Karate Kid", "Final Destination", "The Godfather", "Hulk", 
+            "Hunter x Hunter", "Snow White", "Mufasa", "Jumanji",
+            "Ride Along", "Soul", "Scary Movie", "Coco", "Terrifier", 
+            "Encanto", "Don't breath", "Cinderella", "Mulan", "Zombieland", 
+            "Hitman", "47 meters down", "Raponzel", "من الحب ما قتل", 
+            "Happy New Year", "Scream", "Bird Box", "Fight Club",
+            "Back To The Future", "Parasite", "Oppenheimer",
+            "Gladiator", "Home Alone", "Fast and Furious", "Pirates of the Caribbean (Jack Sparrow)",
+            "Black Panther", "Mission Impossible", ""
         ];
 
         function pickRandomTitle() {
