--- a/index.html
+++ b/index.html
@@ -71,11 +71,12 @@
             "Hunter x Hunter", "Snow White", "Mufasa", "Jumanji",
             "Ride Along", "Soul", "Scary Movie", "Coco", "Terrifier", 
             "Encanto", "Don't breath", "Cinderella", "Mulan", "Zombieland", 
-            "Hitman", "47 meters down", "Raponzel", "من الحب ما قتل", 
+            "Hitman", "47 meters down", "Raponzel", 
             "Happy New Year", "Scream", "Bird Box", "Fight Club",
             "Back To The Future", "Parasite", "Oppenheimer",
             "Gladiator", "Home Alone", "Fast and Furious", "Pirates of the Caribbean (Jack Sparrow)",
-            "Black Panther", "Mission Impossible", ""
+            "Black Panther", "Mission Impossible", "Narcos", "Supernatural",
+            "A quiet place", "The Office", "Lost", "Family Guy", "Rick and Morty"
         ];
 
         function pickRandomTitle() {
